fix misalignment of tooltipImg overlay & hero-img at 576px width up

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -987,7 +987,7 @@ p {
 
   .tooltip-selector > .tooltipimg {
   	top: -170px;
-  	left: -3px;
+  	left: -7px;
   	height: 174px;
   	width: 174px;
   }
